# starvell-repricer

./: .dockerignore  .env.example  .env.main.example  .env.worker-fast-1.example  .env.worker-fast-2.example  .env.worker-slow.example  .gitignore  Dockerfile  MULTI_SERVER_DEPLOY.md  PROXY_SETUP.md  README.md  alembic.ini  check_price_write_config.py  docker-compose.main.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_05_12_1800-0001_initial_schema.py  2026_05_15_1200-0002_add_lot_ids.py  2026_05_15_2100-0003_add_worker_heartbeats.py  2026_05_16_0100-0004_add_worker_effective_limits.py  2026_05_16_0200-0005_add_adaptive_scheduler_state.py
app/: __init__.py  bot_main.py  check_price_write_config.py  check_proxies.py  check_proxy_connectivity.py  check_proxy_limits.py  check_starvell_connection.py  check_starvell_data.py  check_worker_ip.py  check_worker_limits.py  diagnose_competitors.py  main.py  test_price_update.py  worker_main.py
app/bot/: formatters.py  keyboards.py  middlewares.py  status_context.py  ui.py
app/core/: config.py  logging.py  network.py
scripts/: __init__.py  seed_positions.py
tests/: test_adaptive_scheduler.py  test_bot_formatters.py  test_bot_keyboards.py  test_bot_reliability.py  test_check_starvell_data.py  test_competitor_filter.py  test_config.py  test_diagnose_competitors.py  test_price_strategy.py  test_priority_queue.py  test_proxy_config.py  test_proxy_connectivity.py  test_rate_limiter.py  test_scheduler_proxy_errors.py  test_starvell_client.py  test_worker_scheduler.py
(+20 files in other folders)
