[project]
name = "starvell-repricer"
version = "0.1.0"
description = "Dry-run first Starvell/Statvell Roblox robux repricer with Telegram control."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "psycopg[binary]>=3.2,<4",
    "redis>=5,<6",
    "sqlalchemy[asyncio]>=2.0,<3",
    "structlog>=24,<26",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
